Update and rename inex.html to index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </tr>
   </table>
 
-  <button type="button" name="HOME"><a href="inex.html">HOME</a></button>
+  <button type="button" name="HOME"><a href="index.html">HOME</a></button>
   <button type="button" name="MY HOBBIES"><a href="hobbies.html">MY HOBBIES</a></button>
   <button type="button" name="CONTACT ME"><a href="contact.html">CONTACT</a></button>
   <hr size="5%" color="yellow" width="100%">
