--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1 align="center">MY HOBBIES</h1>
-  <button type="button" name="HOME"><a href="inex.html">HOME</a></button>
+  <button type="button" name="HOME"><a href="index.html">HOME</a></button>
   <button type="button" name="CONTACT ME"><a href="contact.html">CONTACT</a></button>
   <hr size="5%" color="green" width="100%">
   <hr size="5%" color="grey" width="80%">
