--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1 align="center">MY CONTACT</h1>
-    <button type="button" name="HOME"><a href="inex.html">HOME</a></button>
+    <button type="button" name="HOME"><a href="index.html">HOME</a></button>
     <button type="button" name="MY HOBBIES"><a href="hobbies.html">MY HOBBIES</a></button>
     <hr size="5%" color="wine" width= "100%">
     <hr size="5%" color="floral" width= "80%">
