--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="images/paul.jpg" alt="TonniPaul Photo" width="150px" height="150px"></td>
+      <td> <img src="images/paul.png" alt="TonniPaul Photo" width="150px" height="150px"></td>
       <td>
         <h1>Paul Oluwatoni Ariyo-Adeoye</h1>
         <p><em>CEO <strong><a href="https://www.instagram.com/tonnipaulwears/">TONNIPAUL WEARS</a></strong>.</em></p>
