--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device=width, initial-scale=1"
     <title>CONTACT ME</title>
   </head>
   <body>
