--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -7,23 +8,26 @@
 </head>
 
 <body>
-  <table cellspacing="20">
+  <table cellspacing="20" align="center">
     <tr>
       <td> <img src="images/paul.png" alt="TonniPaul Photo" width="150px" height="150px"></td>
       <td>
-        <h1>Paul Oluwatoni Ariyo-Adeoye</h1>
+        <h1>PAUL OLUWATONI ARIYO-ADEOYE</h1>
         <p><em>CEO <strong><a href="https://www.instagram.com/tonnipaulwears/">TONNIPAUL WEARS</a></strong>.</em></p>
         <p>My name is <strong> PAUL OLUWATONI ARIYO-ADEOYE</strong> the third born child of <strong>Rev and Pastor (Mrs) ARIYO-ADEOYE</strong>></p>
       </td>
     </tr>
   </table>
-
+<div align="center">
+  
   <button type="button" name="HOME"><a href="index.html">HOME</a></button>
   <button type="button" name="MY HOBBIES"><a href="hobbies.html">MY HOBBIES</a></button>
   <button type="button" name="CONTACT ME"><a href="contact.html">CONTACT</a></button>
   <hr size="5%" color="yellow" width="100%">
   <hr size="5%" color="Black" width="80%">
   <hr size="5%" color="Blue" width="60%">
+  
+</div>
   <h3>EDUCATIONAL BACKGROUND</h3>
   <ul>
     <li>Tai Solarin University of Education</li>
